<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/home_title_layout_common"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerline_width"
        android:background="@color/border" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerline_width"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/upload_head"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <ImageView
                    android:id="@+id/head"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_head" />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toRightOf="@+id/head"
                    android:text="@string/head" />

                <ImageView
                    android:id="@+id/avatar_default"
                    android:src="@drawable/avatar_default"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp" />
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <View
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerline_width"
            android:layout_marginLeft="16dp"
            android:background="@color/border" />

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/namelogo"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_accout" />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toRightOf="@+id/namelogo"
                    android:text="@string/account" />

                <TextView
                    android:id="@+id/accout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/dark_grey"
                    android:textSize="18sp"
                    android:layout_marginRight="16dp"
                    />
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerline_width"
            android:layout_marginLeft="16dp"
            android:background="@color/border" />

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/passwordlogo"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_password" />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toRightOf="@+id/passwordlogo"
                    android:text="@string/change_password" />

                <ImageButton
                    style="@style/InfoOptionArrow"
                    android:background="@color/transparent" />
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerline_width"
            android:background="@color/border" />
        <View
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerline_width"
            android:background="@color/border" />

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/updatelogo"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_update" />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toRightOf="@+id/updatelogo"
                    android:text="@string/change_version" />

                <TextView
                    android:id="@+id/versionName"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="25dp"
                    style="@style/InfoOptionText" />

                <ImageButton
                    style="@style/InfoOptionArrow"
                    android:background="@color/transparent" />
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerline_width"
            android:layout_marginLeft="16dp"
            android:background="@color/border" />

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/clean"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/aboutclean"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_about" />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toRightOf="@+id/aboutclean"
                    android:text="@string/about_clean" />

                <ImageButton
                    style="@style/InfoOptionArrow"
                    android:background="@color/transparent" />
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerline_width"
            android:layout_marginLeft="16dp"
            android:background="@color/border" />
        <View
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/feedbackimage"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_feedback" />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toRightOf="@+id/feedbackimage"
                    android:text="@string/feedback" />

                <ImageButton
                    style="@style/InfoOptionArrow"
                    android:background="@color/transparent" />
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/call_wrap"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/call"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_call"
                    />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toEndOf="@+id/call"
                    android:layout_toRightOf="@+id/call"
                    android:text="@string/call"/>

                <TextView
                    android:id="@+id/contact"
                    android:layout_alignParentRight="true"
                    style="@style/InfoOptionRightText"
                    tools:text="1881780"/>
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout
            style="@style/Ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/aboutlogo"
                    style="@style/InfoOptionIcon"
                    android:src="@drawable/context_about" />

                <TextView
                    style="@style/InfoOptionText"
                    android:layout_toRightOf="@+id/aboutlogo"
                    android:text="@string/about_dispatch" />

                <ImageButton
                    style="@style/InfoOptionArrow"
                    android:background="@color/transparent" />
            </RelativeLayout>
        </com.songlin.dispatch.widget.material.ripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/border" />

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        style="@style/MainButton"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_out" />


</LinearLayout>
