<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.songlin.dispatch.activity.PersonHomeActivity">

        <ImageView
            android:id="@+id/background_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="-100dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/scrollview_header" />

        <com.songlin.dispatch.widget.ui.PullScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:headerHeight="300dp"
            app:headerVisibleHeight="100dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/scroll_view_head"
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    android:layout_marginTop="100dp"
                    android:background="@color/black"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:layout_marginTop="27dp">

                        <TextView
                            android:id="@+id/user_post"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="96dp"
                            android:layout_marginTop="4dp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:text="Dispatch App Developer"
                            android:textSize="12sp"
                            android:textColor="#A1A1A1" />
                        <!--@string/user_post-->

                        <TextView
                            android:id="@+id/user_book"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="96dp"
                            android:layout_below="@id/user_post"
                            android:layout_marginTop="4dp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:text="@string/user_book"
                            android:textSize="12sp"
                            android:textColor="#A1A1A1" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:padding="1px"
                        android:background="@android:color/white"
                        android:layout_marginLeft="21dp"
                        android:contentDescription="@null"
                        android:src="@drawable/avatar_default" />
                    <!--avatar_default-->
                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/user_avatar"
                        android:layout_marginLeft="13dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3.0"
                        android:shadowDy="3.0"
                        android:shadowRadius="5.0"
                        android:text="罗崧麟"
                        android:textSize="20sp"
                        android:textColor="@android:color/white" />
                    <!--@string/user_name-->
                    <FrameLayout
                        android:id="@+id/user_divider_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_avatar"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="21dp"
                        android:layout_marginRight="21dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@null"
                            android:background="#DFDFDF" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="29dp"
                            android:contentDescription="@null" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/user_des"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_divider_layout"
                        android:layout_marginLeft="21dp"
                        android:layout_marginRight="21dp"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/user_des"
                        android:textSize="12sp"
                        android:textColor="#B1B1B1" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-1dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:background="#F7F4F0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="13dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/user_recommend_tip"
                        android:textSize="12sp"
                        android:textColor="#A1A1A1" />

                    <TableLayout
                        android:id="@+id/table_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </com.songlin.dispatch.widget.ui.PullScrollView>

</RelativeLayout>
